# vesselmq-client4c

./: CMakeLists.txt  README.md  README.txt
CClient/: CClientProducer.cpp  CMakeLists.txt  CProducer.cpp
CClient/CProducer/: CClientProducer  CClientProducer.c  CDefaultMQProducer.cpp  CDefaultMQProducer.h  CDefaultMQProducerWapper.cpp  CDefaultMQProducerWapper.h  CMakeLists.txt  run.sh
CClient/CPullConsumer/: CMakeLists.txt  CPullConsumer  CPullConsumer.c  CPullConsumer.cpp  CPullConsumer.h  CPullConsumerWapper.cpp  CPullConsumerWapper.h  run.sh
CClient/CPushConsumer/: CMakeLists.txt  CPushConsumer.cpp  CPushConsumer.h  CPushConsumerWapper.cpp  CPushConsumerWapper.h  CPushconsumer  CPushconsumer.c  Tool.cpp  Tool.h  run.sh
CClient/common/: AllocateMessageQueueStrategyStatus.h  CMakeLists.txt  Struct_ConsumeConcurrentlyContext.h  Struct_MessageExt.h  Struct_PullResult.h
Debug/: async_producer  cproducer  producer  pull_consumer  push_consumer
example/simple/: AsyncProducer.cpp  CMakeLists.txt  Producer.cpp  PullConsumer.cpp  PushConsumer.cpp
include/: CDefaultMQProducer.h  CDefaultMQProducerWapper.h  CPullConsumer.h  CPullConsumerWapper.h  CPushConsumer.h  CPushConsumerWapper.h  MapData.h  MessageQueue.h  Struct_ConsumeConcurrentlyContext.h  Struct_MessageExt.h  Struct_MessageQueues.h  Struct_SendResult.h
src/: MQClientAPIImpl.cpp  MQClientFactory.cpp
src/common/: MQVersion.cpp  MQVersion.h
src/consumer/: PullAPIWrapper.cpp  RebalanceImpl.cpp
src/protocol/: CommandCustomHeader.cpp  MQProtos.h
src/transport/: SocketUtil.cpp  SocketUtil.h  TcpRemotingClient.cpp  TcpRemotingClient.h  TcpTransport.cpp  TcpTransport.h
